--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "deepmerge": "^4.2.2",
+    "vee-validate": "^3.4.5",
     "vue": "^2.5.2",
     "vue-i18n": "^8.24.3",
     "vue-loader": "^15.9.6",
