--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@storybook/vue": "^6.2.9",
     "axios": "^0.21.1",
     "core-js": "^3.11.3",
     "deepmerge": "^4.2.2",
+    "jquery": "^3.6.0",
+    "postcss": "^8.2.14",
+    "postcss-loader": "^5.2.0",
+    "semantic-ui-css": "^2.4.1",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.24.4",
     "vue-loader": "^15.9.6",
     "vue-router": "^3.2.0",
-    "vuex": "^3.6.2",
-    "@storybook/vue": "^6.2.9"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
