--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "start-storybook-alt-folder": "start-storybook -p 6006 -c storybookConfig",
+    "lint-storybook": "eslint .storybook/**/*.js",
+    "storybook": "npm run lint-storybook -- --fix  && start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "build-storybook-alt-folder": "build-storybook -c storybookConfig"
   },
   "dependencies": {
     "@storybook/vue": "^6.2.9",
@@ -30,6 +33,7 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/cli": "^6.2.9",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -40,6 +44,7 @@
     "babel-loader": "^8.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-storybook": "^0.1.1",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
